tests/harness/errors/163_malformed_decl_head.eu
# Error test: backtick with no following colon used to panic in validate.
# It should produce a proper error rather than a panic.
x: { a: 1 ` }
RESULT: x
